--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "roji",
   "main": "dist/index.ts",
   "module": "dist/index.ts",
-  "files": [ "dist", "README.md" ]
+  "files": [ "dist", "README.md" ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Gilbert1Rosa/roji"
+  },
   "version": "0.1.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
